Stylisation complète de suggestions/show.blade.php, correction du findOrFail sur le contrôleur Suggestion, ajout d'une nouvelle icône 'media', autres ajustements de l'alignement en CSS

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,6 +65,7 @@ body.dark-mode {
 .button {
     padding: 5px 10px;
     font-size: 1rem;
+    color: var(--text-main);
     border: 2px solid rgba(0,0,0,0.3);
     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
@@ -105,6 +106,10 @@ body.dark-mode {
 
 .round-10 {
     border-radius: 10px;
+}
+
+.round-15 {
+    border-radius: 15px;
 }
 
 .round-20 {
@@ -523,7 +528,7 @@ input[type="file"] {
 .details-data {
     width: 100%;
     height: 100%;
-    max-height: 150px;
+    max-height: 600px;
 }
 
 .details-key {
@@ -539,6 +544,12 @@ input[type="file"] {
     min-width: 40px;
     background-color: var(--details);
     box-shadow: 2px 2px 5px var(--details);
+}
+
+.details-value img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
 
 .description {
@@ -630,7 +641,6 @@ input[type="file"] {
 
 .map-card-compact {
     margin: 0 auto;
-    gap: 20px;
     width: 100%;
     height: 90px;
     background-size: cover;
